[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI.gd" type="Script" id=1]
[ext_resource path="res://Fonts/ConquistadormanNF.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 21
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 27
font_data = ExtResource( 2 )

[node name="UI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Message" type="Label" parent="."]
margin_left = 180.0
margin_top = 250.0
margin_right = 1057.0
margin_bottom = 334.0
custom_fonts/font = SubResource( 1 )
text = "This is Andrew's Bird Dodge Game"
align = 1

[node name="Start" type="Button" parent="."]
margin_left = 480.0
margin_top = 460.0
margin_right = 750.0
margin_bottom = 540.0
custom_fonts/font = SubResource( 2 )
text = "Click here to start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Score" type="Label" parent="."]
margin_left = 120.0
margin_top = 50.0
margin_right = 358.0
margin_bottom = 74.0
rect_min_size = Vector2( 3, 4 )
size_flags_stretch_ratio = 0.0
custom_fonts/font = SubResource( 3 )
text = "your score is currently 0"
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
